Home page updates # Removed unnessary flexboxes and other properties # Best sellers now has a grid like view using a flexbox, i tried using a grid for it but the number of cols and rows needed to be flexible so i used a flex-wrap instead # Footer has been updated to be fully responsive. I surely used grid-templates there but i could not change the mapping of different sections using nth-child. # Helper and product cards still have the jitter on screen size as the image and add-to-cart button are not yet fixed to the bottom of the container. [needs to be done]

--- a/src/components/cards/product_cards.css
+++ b/src/components/cards/product_cards.css
@@ -1,14 +1,16 @@
 .product-card{
     --border-radius: 1rem;
-    /* display: flex;
-    flex-direction: column; */
-    /* position: relative; */
     border: solid black;
     border-width: clamp(2px, 0.4vw, 5px);
     padding: 0.6vw;
-    /* margin: 2rem; */
     width: clamp(10rem, 20vw, 25rem);
     border-radius: var(--border-radius);
+    background-color: transparent;
+
+    /* display: flex; */
+    /* flex-direction: column; */
+
+    /* justify-content: space-between; */
 }
 
 .product-card > img{
@@ -18,12 +20,13 @@
 }
 
 .product-card > p{
-    display: flex;
     margin: 0.5rem 0;
-    justify-content: space-between;
     /* border: solid 3px cyan; */
 }
 
+.product-prize{
+    float: right;
+}
 
 .product-card-line-one{
     font-size: 2.2rem;
@@ -35,8 +38,6 @@
 }
 
 .product-card > button{
-    /* position: absolute; */
-    /* bottom: 0; */
     width: max-content;
     font-size: 1.5rem;
     border-radius: 20px;
@@ -44,7 +45,16 @@
     background-color: white;
     border: 3px solid black;
     font-weight: bold;
+    /* margin: auto; */
+
+    /* align-self:baseline; */
 }
+
+/* .product-card-line-two{ */
+    /* border: 2px red solid; */
+    /* min-height: 3.3vw; */
+    /* line-height: 1.8rem; */
+/* } */
 
 .product-card:hover{
     background-color: black;
