--- a/src/components/main_components/footer.css
+++ b/src/components/main_components/footer.css
@@ -1,19 +1,27 @@
 footer{
-    display: flex;
-    gap: 1.5vw;
+    display: grid;
+    grid-template-areas: 
+    'department about services help'
+    ;
+
+    gap: 2rem;
     font-size: 2rem;
     background-color: black;
     color: white;
-    padding: 2rem;
+    /* padding: 2rem; */
     margin-top: 15rem;
+    /* justify-content: center; */
+    /* flex-wrap: wrap; */
 }
 
-footer > section{
-    padding: 0 5rem;
+
+
+/* footer > section{ */
+    /* padding: 0 5rem; */
     /* border: solid red 3px; */
-    flex-grow: 1;
-    align-items: center;
-}
+    /* flex-grow: 1; */
+    /* align-items: center; */
+/* } */
 
 footer > section > ul{
     list-style: none;
@@ -28,4 +36,26 @@ footer > section > ul > li{
 
 footer > section > ul > li:hover{
     cursor: pointer;
+}
+
+@media (max-width: 1000px) {
+    footer{
+        grid-template-areas: 
+        'department about'
+        'services help'
+        ;
+    }
+}
+
+@media (max-width: 800px) {
+    footer{
+        grid-template-areas: 
+        'department'
+        'about'
+        'services'
+        'help'
+        ;
+
+        margin-top: 8rem;
+    }
 }
